# ttb-label-reviewer

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  build-brief.md  contracts.md  decisions.md  design-review.md  evaluation.md  project-description.md  single-result-label-preview-plan.md  ttb-requirements.md  usability-restructure-plan.md  wine-malt-implementation-plan.md  wine-malt-research-brief.md  wine-malt-research-memo.md
golden/: build_demo.py  faithful_extractions.json  generate.py  manifest.json  probe_illegibility.py
scripts/: build_favicon.py
spikes/label-renderer/: SPIKE.md  render_labels.py
src/ttb_label_reviewer/: batch.py  jobs.py  limits.py  main.py  pipeline.py
src/ttb_label_reviewer/engine/: __init__.py  canonical.py  diff.py  engine.py  normalize.py  parsers.py  rules.py  types.py
src/ttb_label_reviewer/evaluation/: __init__.py  __main__.py
src/ttb_label_reviewer/extraction/: __init__.py  anthropic_adapter.py  base.py  offline.py  prompt.py
src/ttb_label_reviewer/static/: style.css
src/ttb_label_reviewer/static/demo/: demo.json
src/ttb_label_reviewer/templates/: base.html  index.html
src/ttb_label_reviewer/templates/partials/: batch_counts.html  batch_error_row.html  batch_failed.html  (+5 more)
tests/: helpers.py  test_api.py  test_app.py  test_batch.py  test_contracts.py  test_demo.py  test_engine.py  test_extraction_adapter.py  test_extraction_prompt.py  test_golden.py  test_normalize.py  test_parsers.py  test_pipeline.py  test_rules.py  test_types.py  test_ui.py
